# TLSWrapper

./: CMakeLists.txt  READEME.md  req
.github/workflows/: push_commits_action.yml
inc/: SecureClient.h  SecureServer.h  ServerConfig.h
keys/: generate_crt_commands  localhost.crt  localhost.csr  localhost.key  localhost_ed25519.conf
src/: SecureClient.cpp  SecureServer.cpp  ServerConfig.cpp  main.cpp
